added vorticity confinement

--- a/MyFluid/MyFluid/MyFluid.vcxproj.filters
+++ b/MyFluid/MyFluid/MyFluid.vcxproj.filters
@@ -68,6 +68,9 @@
     <None Include="..\res\push.comp">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\res\vorticity.comp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\Fluid.cpp">
