--- a/MyFluid/MyFluid/MyFluid.vcxproj
+++ b/MyFluid/MyFluid/MyFluid.vcxproj
@@ -174,6 +174,7 @@
     <None Include="..\res\Jacobi.comp" />
     <None Include="..\res\push.comp" />
     <None Include="..\res\subtractGradient.comp" />
+    <None Include="..\res\vorticity.comp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
